force-app/main/default/objects/Rpl_Training_Attendances__c/Rpl_Training_Attendances__c.object-meta.xml
<CustomObject>
    <label>Training Attendances</label>
    <nameField>
        <displayFormat>RTA-{000000}</displayFormat>
        <label>Training Attendance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>