force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>