force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>