force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>