force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>