force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Student_Name__c</fullName>
    <label>Student Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>