force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Training_Module__c</fullName>
    <label>Training Module</label>
    <referenceTo>Rpl_Training_Module__c</referenceTo>
    <relationshipLabel>Training Attendances</relationshipLabel>
    <relationshipName>Training_Attendances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>