force-app/main/default/objects/Rpl_Training_Attendances__c/fields/Rpl_Training_Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Training_Module_Name__c</fullName>
    <label>Training Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>