force-app/main/default/objects/Rpl_Training_Attendances__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_Date__c</columns>
    <columns>Rpl_Student__c</columns>
    <columns>Rpl_Training_Module__c</columns>
    <columns>Rpl_Attendance__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>